--- a/requests.ipynb
+++ b/requests.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 1. TESTE DE WEB SCRAPING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Importando bibliotecas necessárias e realizando Web Scraping\n",
     "\n",
     "### Utilizando **Requests** para fazer requisições HTTP e baixar páginas web.\n",
@@ -164,6 +171,487 @@
     "compress_zip()\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2 . TESTE DE TRANSFORMAÇÃO DE DADOS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importando bibliotecas e definindo o path do pdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pdfplumber\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "pdf_path = \"downloads/Anexo_I_Rol_2021RN_465.2021_RN627L.2024.pdf\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Definindo as colunas esperadas da tabela, pra facilitar a organização."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expected_columns = [\n",
+    "    \"PROCEDIMENTO\", \"RN(alteração)\", \"VIGÊNCIA\", \"OD\", \"AMB\", \"HCO\", \"HSO\",\n",
+    "    \"REF\", \"PAC\", \"DUT\", \"SUBGRUPO\", \"GRUPO\", \"CAPÍTULO\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Definindo uma lista pra armazenar os dados estruturados, abrindo o pdf e percorrendo todas as páginas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PROCEDIMENTO</th>\n",
+       "      <th>RN(alteração)</th>\n",
+       "      <th>VIGÊNCIA</th>\n",
+       "      <th>OD</th>\n",
+       "      <th>AMB</th>\n",
+       "      <th>HCO</th>\n",
+       "      <th>HSO</th>\n",
+       "      <th>REF</th>\n",
+       "      <th>PAC</th>\n",
+       "      <th>DUT</th>\n",
+       "      <th>SUBGRUPO</th>\n",
+       "      <th>GRUPO</th>\n",
+       "      <th>CAPÍTULO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PROCEDIMENTO</td>\n",
+       "      <td>RN (alteração)</td>\n",
+       "      <td>VIGÊNCIA</td>\n",
+       "      <td>OD</td>\n",
+       "      <td>AMB</td>\n",
+       "      <td>HCO</td>\n",
+       "      <td>HSO</td>\n",
+       "      <td>REF</td>\n",
+       "      <td>PAC</td>\n",
+       "      <td>DUT</td>\n",
+       "      <td>SUBGRUPO</td>\n",
+       "      <td>GRUPO</td>\n",
+       "      <td>CAPÍTULO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ACONSELHAMENTO GENÉTICO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AMB</td>\n",
+       "      <td>HCO</td>\n",
+       "      <td>HSO</td>\n",
+       "      <td>REF</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ATENDIMENTO/ACOMPANHAMENTO EM HOSPITAL-DIA PSI...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HCO</td>\n",
+       "      <td>HSO</td>\n",
+       "      <td>REF</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>109</td>\n",
+       "      <td>CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ATENDIMENTO INTEGRAL AO RECÉM-NASCIDO (SALA DE...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HCO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>REF</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ATENDIMENTO MÉDICO DO INTENSIVISTA EM UTI GERA...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HCO</td>\n",
+       "      <td>HSO</td>\n",
+       "      <td>REF</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ATENDIMENTO PEDIÁTRICO A GESTANTES (3º TRIMESTRE)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AMB</td>\n",
+       "      <td>HCO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>REF</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ATIVIDADE EDUCACIONAL PARA PLANEJAMENTO FAMILIAR</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AMB</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>REF</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ATIVIDADE EDUCATIVA EM SAÚDE BUCAL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>ATIVIDADE EDUCATIVA EM ODONTOLOGIA PARA PAIS E...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>CONDICIONAMENTO EM ODONTOLOGIA (COM DIRETRIZ D...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>86</td>\n",
+       "      <td>CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>ESTABILIZAÇÃO DE PACIENTE POR MEIO DE CONTENÇÃ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>CONSULTA DE ACONSELHAMENTO PARA PLANEJAMENTO F...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AMB</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>REF</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>CONSULTA COM ENFERMEIRO OBSTETRA OU OBSTETRIZ ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AMB</td>\n",
+       "      <td>HCO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>REF</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>135</td>\n",
+       "      <td>CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>CONSULTA/AVALIAÇÃO COM FISIOTERAPEUTA</td>\n",
+       "      <td>541/2022</td>\n",
+       "      <td>01/08/2022</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AMB</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>REF</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>CONSULTA MÉDICA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AMB</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>REF</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         PROCEDIMENTO   RN(alteração)  \\\n",
+       "0                                        PROCEDIMENTO  RN (alteração)   \n",
+       "1                             ACONSELHAMENTO GENÉTICO             NaN   \n",
+       "2   ATENDIMENTO/ACOMPANHAMENTO EM HOSPITAL-DIA PSI...             NaN   \n",
+       "3   ATENDIMENTO INTEGRAL AO RECÉM-NASCIDO (SALA DE...             NaN   \n",
+       "4   ATENDIMENTO MÉDICO DO INTENSIVISTA EM UTI GERA...             NaN   \n",
+       "5   ATENDIMENTO PEDIÁTRICO A GESTANTES (3º TRIMESTRE)             NaN   \n",
+       "6    ATIVIDADE EDUCACIONAL PARA PLANEJAMENTO FAMILIAR             NaN   \n",
+       "7                  ATIVIDADE EDUCATIVA EM SAÚDE BUCAL             NaN   \n",
+       "8   ATIVIDADE EDUCATIVA EM ODONTOLOGIA PARA PAIS E...             NaN   \n",
+       "9   CONDICIONAMENTO EM ODONTOLOGIA (COM DIRETRIZ D...             NaN   \n",
+       "10  ESTABILIZAÇÃO DE PACIENTE POR MEIO DE CONTENÇÃ...             NaN   \n",
+       "11  CONSULTA DE ACONSELHAMENTO PARA PLANEJAMENTO F...             NaN   \n",
+       "12  CONSULTA COM ENFERMEIRO OBSTETRA OU OBSTETRIZ ...             NaN   \n",
+       "13              CONSULTA/AVALIAÇÃO COM FISIOTERAPEUTA        541/2022   \n",
+       "14                                    CONSULTA MÉDICA             NaN   \n",
+       "\n",
+       "      VIGÊNCIA   OD  AMB  HCO  HSO  REF  PAC  DUT  \\\n",
+       "0     VIGÊNCIA   OD  AMB  HCO  HSO  REF  PAC  DUT   \n",
+       "1          NaN  NaN  AMB  HCO  HSO  REF  NaN  NaN   \n",
+       "2          NaN  NaN  NaN  HCO  HSO  REF  NaN  109   \n",
+       "3          NaN  NaN  NaN  HCO  NaN  REF  NaN  NaN   \n",
+       "4          NaN  NaN  NaN  HCO  HSO  REF  NaN  NaN   \n",
+       "5          NaN  NaN  AMB  HCO  NaN  REF  NaN  NaN   \n",
+       "6          NaN  NaN  AMB  NaN  NaN  REF  NaN  NaN   \n",
+       "7          NaN   OD  NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "8          NaN   OD  NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "9          NaN   OD  NaN  NaN  NaN  NaN  NaN   86   \n",
+       "10         NaN   OD  NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "11         NaN  NaN  AMB  NaN  NaN  REF  NaN  NaN   \n",
+       "12         NaN  NaN  AMB  HCO  NaN  REF  NaN  135   \n",
+       "13  01/08/2022  NaN  AMB  NaN  NaN  REF  NaN  NaN   \n",
+       "14         NaN  NaN  AMB  NaN  NaN  REF  NaN  NaN   \n",
+       "\n",
+       "                                             SUBGRUPO                 GRUPO  \\\n",
+       "0                                            SUBGRUPO                 GRUPO   \n",
+       "1   CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
+       "2   CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
+       "3   CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
+       "4   CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
+       "5   CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
+       "6   CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
+       "7   CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
+       "8   CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
+       "9   CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
+       "10  CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
+       "11  CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
+       "12  CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
+       "13  CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
+       "14  CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
+       "\n",
+       "                CAPÍTULO  \n",
+       "0               CAPÍTULO  \n",
+       "1   PROCEDIMENTOS GERAIS  \n",
+       "2   PROCEDIMENTOS GERAIS  \n",
+       "3   PROCEDIMENTOS GERAIS  \n",
+       "4   PROCEDIMENTOS GERAIS  \n",
+       "5   PROCEDIMENTOS GERAIS  \n",
+       "6   PROCEDIMENTOS GERAIS  \n",
+       "7   PROCEDIMENTOS GERAIS  \n",
+       "8   PROCEDIMENTOS GERAIS  \n",
+       "9   PROCEDIMENTOS GERAIS  \n",
+       "10  PROCEDIMENTOS GERAIS  \n",
+       "11  PROCEDIMENTOS GERAIS  \n",
+       "12  PROCEDIMENTOS GERAIS  \n",
+       "13  PROCEDIMENTOS GERAIS  \n",
+       "14  PROCEDIMENTOS GERAIS  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "structured_data = []\n",
+    "\n",
+    "with pdfplumber.open(pdf_path) as pdf:\n",
+    "    for page in pdf.pages:\n",
+    "        tables = page.extract_tables()\n",
+    "        if not tables:\n",
+    "            continue\n",
+    "        for table in tables:\n",
+    "            table = [\n",
+    "                [item.replace(\"\\n\", \" \").strip() if item else np.nan for item in line] \n",
+    "                for line in table\n",
+    "            ]\n",
+    "\n",
+    "            for line in table:\n",
+    "                if line == expected_columns:\n",
+    "                    continue\n",
+    "\n",
+    "                if len(line) < len(expected_columns):\n",
+    "                    line += [np.nan] * (len(expected_columns) - len(line))  \n",
+    "                elif len(line) > len(expected_columns):\n",
+    "                    line = line[:len(expected_columns)]\n",
+    "\n",
+    "                structured_data.append(line)\n",
+    "\n",
+    "df = pd.DataFrame(structured_data, columns=expected_columns)\n",
+    "\n",
+    "df.dropna(how=\"all\", inplace=True)\n",
+    "\n",
+    "df = df.apply(lambda x: x.str.strip() if x.dtype == \"object\" else x)\n",
+    "\n",
+    "os.makedirs(\"csv_files\", exist_ok=True)\n",
+    "\n",
+    "df.to_csv(\"csv_files/tables_extracted_anexo1.csv\", index=False, na_rep=\"\")\n",
+    "\n",
+    "df.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3571, 13)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
