Fase 2: feat: renomeando colunas

--- a/requests.ipynb
+++ b/requests.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importando bibliotecas necessárias e realizando Web Scraping\n",
+    "## Importando bibliotecas necessárias para realizar o Web Scraping\n",
     "\n",
     "### Utilizando **Requests** para fazer requisições HTTP e baixar páginas web.\n",
     "### Utilizando **beautifulsoup4** para extrair e manipular dados de HTML/XML de forma fácil."
@@ -19,20 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import os\n",
-    "\n",
-    "url = \"https://www.gov.br/ans/pt-br/acesso-a-informacao/participacao-da-sociedade/atualizacao-do-rol-de-procedimentos\"\n",
-    "response = requests.get(url)\n",
-    "\n",
-    "headers = {\n",
-    "    \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36\"\n",
-    "}\n"
+    "\n"
    ]
   },
   {
@@ -44,10 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "url = \"https://www.gov.br/ans/pt-br/acesso-a-informacao/participacao-da-sociedade/atualizacao-do-rol-de-procedimentos\"\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "headers = {\n",
+    "    \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36\"\n",
+    "}\n",
+    "\n",
     "def download_pdf(pdf_url, path=\"downloads\"):\n",
     "    os.makedirs(path, exist_ok=True)\n",
     "    filename = os.path.join(path, pdf_url.split(\"/\")[-1])\n",
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -187,36 +188,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pdfplumber\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os\n",
-    "\n",
-    "pdf_path = \"downloads/Anexo_I_Rol_2021RN_465.2021_RN627L.2024.pdf\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Definindo as colunas esperadas da tabela, pra facilitar a organização."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expected_columns = [\n",
-    "    \"PROCEDIMENTO\", \"RN(alteração)\", \"VIGÊNCIA\", \"OD\", \"AMB\", \"HCO\", \"HSO\",\n",
-    "    \"REF\", \"PAC\", \"DUT\", \"SUBGRUPO\", \"GRUPO\", \"CAPÍTULO\"\n",
-    "]"
    ]
   },
   {
@@ -228,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -255,8 +230,8 @@
        "      <th>PROCEDIMENTO</th>\n",
        "      <th>RN(alteração)</th>\n",
        "      <th>VIGÊNCIA</th>\n",
-       "      <th>OD</th>\n",
-       "      <th>AMB</th>\n",
+       "      <th>SEG.ODONTOLOGICA</th>\n",
+       "      <th>SEG.AMBULATORIAL</th>\n",
        "      <th>HCO</th>\n",
        "      <th>HSO</th>\n",
        "      <th>REF</th>\n",
@@ -270,22 +245,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>PROCEDIMENTO</td>\n",
-       "      <td>RN (alteração)</td>\n",
-       "      <td>VIGÊNCIA</td>\n",
-       "      <td>OD</td>\n",
-       "      <td>AMB</td>\n",
-       "      <td>HCO</td>\n",
-       "      <td>HSO</td>\n",
-       "      <td>REF</td>\n",
-       "      <td>PAC</td>\n",
-       "      <td>DUT</td>\n",
-       "      <td>SUBGRUPO</td>\n",
-       "      <td>GRUPO</td>\n",
-       "      <td>CAPÍTULO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>ACONSELHAMENTO GENÉTICO</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -301,7 +260,7 @@
        "      <td>PROCEDIMENTOS GERAIS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>ATENDIMENTO/ACOMPANHAMENTO EM HOSPITAL-DIA PSI...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -317,7 +276,7 @@
        "      <td>PROCEDIMENTOS GERAIS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>ATENDIMENTO INTEGRAL AO RECÉM-NASCIDO (SALA DE...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -333,7 +292,7 @@
        "      <td>PROCEDIMENTOS GERAIS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>ATENDIMENTO MÉDICO DO INTENSIVISTA EM UTI GERA...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -349,7 +308,7 @@
        "      <td>PROCEDIMENTOS GERAIS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>ATENDIMENTO PEDIÁTRICO A GESTANTES (3º TRIMESTRE)</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -365,7 +324,7 @@
        "      <td>PROCEDIMENTOS GERAIS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>5</th>\n",
        "      <td>ATIVIDADE EDUCACIONAL PARA PLANEJAMENTO FAMILIAR</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -381,7 +340,7 @@
        "      <td>PROCEDIMENTOS GERAIS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>6</th>\n",
        "      <td>ATIVIDADE EDUCATIVA EM SAÚDE BUCAL</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -397,7 +356,7 @@
        "      <td>PROCEDIMENTOS GERAIS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>7</th>\n",
        "      <td>ATIVIDADE EDUCATIVA EM ODONTOLOGIA PARA PAIS E...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -413,7 +372,7 @@
        "      <td>PROCEDIMENTOS GERAIS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>8</th>\n",
        "      <td>CONDICIONAMENTO EM ODONTOLOGIA (COM DIRETRIZ D...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -429,7 +388,7 @@
        "      <td>PROCEDIMENTOS GERAIS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>9</th>\n",
        "      <td>ESTABILIZAÇÃO DE PACIENTE POR MEIO DE CONTENÇÃ...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -445,7 +404,7 @@
        "      <td>PROCEDIMENTOS GERAIS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>10</th>\n",
        "      <td>CONSULTA DE ACONSELHAMENTO PARA PLANEJAMENTO F...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -461,7 +420,7 @@
        "      <td>PROCEDIMENTOS GERAIS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>11</th>\n",
        "      <td>CONSULTA COM ENFERMEIRO OBSTETRA OU OBSTETRIZ ...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -477,7 +436,7 @@
        "      <td>PROCEDIMENTOS GERAIS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>12</th>\n",
        "      <td>CONSULTA/AVALIAÇÃO COM FISIOTERAPEUTA</td>\n",
        "      <td>541/2022</td>\n",
        "      <td>01/08/2022</td>\n",
@@ -493,7 +452,7 @@
        "      <td>PROCEDIMENTOS GERAIS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>13</th>\n",
        "      <td>CONSULTA MÉDICA</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -508,47 +467,63 @@
        "      <td>PROCEDIMENTOS GERAIS</td>\n",
        "      <td>PROCEDIMENTOS GERAIS</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>CONSULTA ODONTOLÓGICA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "      <td>PROCEDIMENTOS GERAIS</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         PROCEDIMENTO   RN(alteração)  \\\n",
-       "0                                        PROCEDIMENTO  RN (alteração)   \n",
-       "1                             ACONSELHAMENTO GENÉTICO             NaN   \n",
-       "2   ATENDIMENTO/ACOMPANHAMENTO EM HOSPITAL-DIA PSI...             NaN   \n",
-       "3   ATENDIMENTO INTEGRAL AO RECÉM-NASCIDO (SALA DE...             NaN   \n",
-       "4   ATENDIMENTO MÉDICO DO INTENSIVISTA EM UTI GERA...             NaN   \n",
-       "5   ATENDIMENTO PEDIÁTRICO A GESTANTES (3º TRIMESTRE)             NaN   \n",
-       "6    ATIVIDADE EDUCACIONAL PARA PLANEJAMENTO FAMILIAR             NaN   \n",
-       "7                  ATIVIDADE EDUCATIVA EM SAÚDE BUCAL             NaN   \n",
-       "8   ATIVIDADE EDUCATIVA EM ODONTOLOGIA PARA PAIS E...             NaN   \n",
-       "9   CONDICIONAMENTO EM ODONTOLOGIA (COM DIRETRIZ D...             NaN   \n",
-       "10  ESTABILIZAÇÃO DE PACIENTE POR MEIO DE CONTENÇÃ...             NaN   \n",
-       "11  CONSULTA DE ACONSELHAMENTO PARA PLANEJAMENTO F...             NaN   \n",
-       "12  CONSULTA COM ENFERMEIRO OBSTETRA OU OBSTETRIZ ...             NaN   \n",
-       "13              CONSULTA/AVALIAÇÃO COM FISIOTERAPEUTA        541/2022   \n",
-       "14                                    CONSULTA MÉDICA             NaN   \n",
+       "                                         PROCEDIMENTO RN(alteração)  \\\n",
+       "0                             ACONSELHAMENTO GENÉTICO           NaN   \n",
+       "1   ATENDIMENTO/ACOMPANHAMENTO EM HOSPITAL-DIA PSI...           NaN   \n",
+       "2   ATENDIMENTO INTEGRAL AO RECÉM-NASCIDO (SALA DE...           NaN   \n",
+       "3   ATENDIMENTO MÉDICO DO INTENSIVISTA EM UTI GERA...           NaN   \n",
+       "4   ATENDIMENTO PEDIÁTRICO A GESTANTES (3º TRIMESTRE)           NaN   \n",
+       "5    ATIVIDADE EDUCACIONAL PARA PLANEJAMENTO FAMILIAR           NaN   \n",
+       "6                  ATIVIDADE EDUCATIVA EM SAÚDE BUCAL           NaN   \n",
+       "7   ATIVIDADE EDUCATIVA EM ODONTOLOGIA PARA PAIS E...           NaN   \n",
+       "8   CONDICIONAMENTO EM ODONTOLOGIA (COM DIRETRIZ D...           NaN   \n",
+       "9   ESTABILIZAÇÃO DE PACIENTE POR MEIO DE CONTENÇÃ...           NaN   \n",
+       "10  CONSULTA DE ACONSELHAMENTO PARA PLANEJAMENTO F...           NaN   \n",
+       "11  CONSULTA COM ENFERMEIRO OBSTETRA OU OBSTETRIZ ...           NaN   \n",
+       "12              CONSULTA/AVALIAÇÃO COM FISIOTERAPEUTA      541/2022   \n",
+       "13                                    CONSULTA MÉDICA           NaN   \n",
+       "14                              CONSULTA ODONTOLÓGICA           NaN   \n",
        "\n",
-       "      VIGÊNCIA   OD  AMB  HCO  HSO  REF  PAC  DUT  \\\n",
-       "0     VIGÊNCIA   OD  AMB  HCO  HSO  REF  PAC  DUT   \n",
-       "1          NaN  NaN  AMB  HCO  HSO  REF  NaN  NaN   \n",
-       "2          NaN  NaN  NaN  HCO  HSO  REF  NaN  109   \n",
-       "3          NaN  NaN  NaN  HCO  NaN  REF  NaN  NaN   \n",
-       "4          NaN  NaN  NaN  HCO  HSO  REF  NaN  NaN   \n",
-       "5          NaN  NaN  AMB  HCO  NaN  REF  NaN  NaN   \n",
-       "6          NaN  NaN  AMB  NaN  NaN  REF  NaN  NaN   \n",
-       "7          NaN   OD  NaN  NaN  NaN  NaN  NaN  NaN   \n",
-       "8          NaN   OD  NaN  NaN  NaN  NaN  NaN  NaN   \n",
-       "9          NaN   OD  NaN  NaN  NaN  NaN  NaN   86   \n",
-       "10         NaN   OD  NaN  NaN  NaN  NaN  NaN  NaN   \n",
-       "11         NaN  NaN  AMB  NaN  NaN  REF  NaN  NaN   \n",
-       "12         NaN  NaN  AMB  HCO  NaN  REF  NaN  135   \n",
-       "13  01/08/2022  NaN  AMB  NaN  NaN  REF  NaN  NaN   \n",
-       "14         NaN  NaN  AMB  NaN  NaN  REF  NaN  NaN   \n",
+       "      VIGÊNCIA SEG.ODONTOLOGICA SEG.AMBULATORIAL  HCO  HSO  REF  PAC  DUT  \\\n",
+       "0          NaN              NaN              AMB  HCO  HSO  REF  NaN  NaN   \n",
+       "1          NaN              NaN              NaN  HCO  HSO  REF  NaN  109   \n",
+       "2          NaN              NaN              NaN  HCO  NaN  REF  NaN  NaN   \n",
+       "3          NaN              NaN              NaN  HCO  HSO  REF  NaN  NaN   \n",
+       "4          NaN              NaN              AMB  HCO  NaN  REF  NaN  NaN   \n",
+       "5          NaN              NaN              AMB  NaN  NaN  REF  NaN  NaN   \n",
+       "6          NaN               OD              NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "7          NaN               OD              NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "8          NaN               OD              NaN  NaN  NaN  NaN  NaN   86   \n",
+       "9          NaN               OD              NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "10         NaN              NaN              AMB  NaN  NaN  REF  NaN  NaN   \n",
+       "11         NaN              NaN              AMB  HCO  NaN  REF  NaN  135   \n",
+       "12  01/08/2022              NaN              AMB  NaN  NaN  REF  NaN  NaN   \n",
+       "13         NaN              NaN              AMB  NaN  NaN  REF  NaN  NaN   \n",
+       "14         NaN               OD              NaN  NaN  NaN  NaN  NaN  NaN   \n",
        "\n",
        "                                             SUBGRUPO                 GRUPO  \\\n",
-       "0                                            SUBGRUPO                 GRUPO   \n",
+       "0   CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
        "1   CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
        "2   CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
        "3   CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
@@ -565,7 +540,7 @@
        "14  CONSULTAS, VISITAS HOSPITALARES OU ACOMPANHAME...  PROCEDIMENTOS GERAIS   \n",
        "\n",
        "                CAPÍTULO  \n",
-       "0               CAPÍTULO  \n",
+       "0   PROCEDIMENTOS GERAIS  \n",
        "1   PROCEDIMENTOS GERAIS  \n",
        "2   PROCEDIMENTOS GERAIS  \n",
        "3   PROCEDIMENTOS GERAIS  \n",
@@ -582,12 +557,23 @@
        "14  PROCEDIMENTOS GERAIS  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pdfplumber\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "pdf_path = \"downloads/Anexo_I_Rol_2021RN_465.2021_RN627L.2024.pdf\"\n",
+    "\n",
+    "expected_columns = [\n",
+    "    \"PROCEDIMENTO\", \"RN(alteração)\", \"VIGÊNCIA\", \"OD\", \"AMB\", \"HCO\", \"HSO\",\n",
+    "    \"REF\", \"PAC\", \"DUT\", \"SUBGRUPO\", \"GRUPO\", \"CAPÍTULO\"\n",
+    "]\n",
     "\n",
     "structured_data = []\n",
     "\n",
@@ -605,7 +591,7 @@
     "            for line in table:\n",
     "                if line == expected_columns:\n",
     "                    continue\n",
-    "\n",
+    "                # Se a linha tiver menos colunas do que o esperado, adiciona np.nan até completar\n",
     "                if len(line) < len(expected_columns):\n",
     "                    line += [np.nan] * (len(expected_columns) - len(line))  \n",
     "                elif len(line) > len(expected_columns):\n",
@@ -615,9 +601,25 @@
     "\n",
     "df = pd.DataFrame(structured_data, columns=expected_columns)\n",
     "\n",
-    "df.dropna(how=\"all\", inplace=True)\n",
+    "df = df.rename(columns= {\"OD\": \"SEG.ODONTOLOGICA\", \"AMB\": \"SEG.AMBULATORIAL\"})\n",
     "\n",
-    "df = df.apply(lambda x: x.str.strip() if x.dtype == \"object\" else x)\n",
+    "# Por algum motivo que não consegui identificar, a linha 0 do dataframe estava com os valores das colunas esperadas, tendo as duas linhas do topo repetidas\n",
+    "# por esse motivo removi a linha 0 e resetei o índice do dataframe\n",
+    "# Além disso, removi as linhas que estavam completamente vazias\n",
+    "df = df.drop(index=0)\n",
+    "df = df.reset_index(drop=True)\n",
+    "# O parâmetro how=\"all\" indica que a linha só será removida se todas as colunas forem NaN\n",
+    "df.dropna(how=\"all\", inplace=True)\n",
+    "# Cópia do DataFrame para armazenar os dados normalizados\n",
+    "df_normalized = df.copy()\n",
+    "\n",
+    "for column in df_normalized.columns:\n",
+    "    # Verificar se o tipo de dados da coluna é \"object\" (geralmente strings)\n",
+    "    if df_normalized[column].dtype == \"object\":\n",
+    "        # Se for uma coluna de strings, remover espaços extras no início e no fim de cada valor\n",
+    "        df_normalized[column] = df_normalized[column].str.strip()\n",
+    "# Substituir o DataFrame original pelo DataFrame normalizado\n",
+    "df = df_normalized\n",
     "\n",
     "os.makedirs(\"csv_files\", exist_ok=True)\n",
     "\n",
@@ -625,33 +627,6 @@
     "\n",
     "df.head(15)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3571, 13)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
